demo/versioned_docs/version-1.3.0/event-reference/03-add-to-cart-event.mdx
---
title: Add to Cart Event
description: "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications."
sidebar_label: Add to Cart Event
custom_edit_url: https://github.com/benedikt-buchert/tracking_docs/edit/main/demo/static/schemas/1.3.0/web/add-to-cart-event.json
---

import SchemaViewer from "@theme/SchemaViewer";
import SchemaJsonViewer from "@theme/SchemaJsonViewer";
import TopPartial from "@site/versioned_docs/version-1.3.0/partials/event-reference/_add-to-cart-event.mdx";
import BottomPartial from "@site/versioned_docs/version-1.3.0/partials/event-reference/_add-to-cart-event_bottom.mdx";

# Add to Cart Event

An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.

<TopPartial />

<SchemaViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
    title: "Add to Cart Event",
    description:
      "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
    type: "object",
    required: ["$schema", "event"],
    $defs: {
      strictObject: {
        type: "object",
        propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
        additionalProperties: {
          anyOf: [
            { $ref: "#/allOf/0/$defs/strictObject" },
            { type: "array", items: { $ref: "#/allOf/0/$defs/strictObject" } },
            { not: { type: "object" } },
          ],
        },
      },
    },
    $ref: "#/allOf/0/$defs/strictObject",
    properties: {
      event: {
        type: "string",
        description: "The name of the event.",
        const: "add_to_cart",
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data.",
        "x-gtm-clear": true,
        required: ["currency", "items"],
        properties: {
          value: {
            type: "number",
            description:
              "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
            examples: [30.03, 99.99, 45.5],
          },
          currency: {
            type: "string",
            description:
              "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
            examples: ["USD", "EUR", "GBP"],
          },
          items: {
            $schema: "https://json-schema.org/draft/2020-12/schema",
            $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/items.json",
            title: "Ecommerce Items Array",
            description: "Items associated with this ecommerce event.",
            type: "array",
            minItems: 1,
            items: {
              $schema: "https://json-schema.org/draft/2020-12/schema",
              $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/products.json",
              title: "A Product",
              description:
                "A product object representing an item for use within a purchase event, based on Google Analytics 4 ecommerce event specifications.",
              type: "object",
              required: [],
              properties: {
                item_id: {
                  type: "string",
                  description:
                    "The ID of the item. Either item_id or item_name is required.",
                  examples: ["SKU_12345", "PROD_98765"],
                },
                item_name: {
                  type: "string",
                  description:
                    "The name of the item. Either item_id or item_name is required.",
                  examples: ["Stan and Friends Tee", "Blue Running Shoes"],
                },
                affiliation: {
                  type: "string",
                  description:
                    "A product affiliation to indicate a supplier or store. Note: affiliation is only available at the item level.",
                  examples: ["Google Merchandise Store", "Nike Store"],
                },
                coupon: {
                  type: "string",
                  description:
                    "The coupon name/code associated with the item. Coupon parameters at event and item levels are independent.",
                  examples: ["SUMMER_FUN", "WELCOME20", "SAVE10"],
                },
                discount: {
                  type: "number",
                  description:
                    "The monetary value of the discount per unit applied to the item.",
                  examples: [2.22, 5, 10.5],
                },
                index: {
                  type: "number",
                  description: "The index or position of the item in a list.",
                  examples: [0, 1, 2],
                },
                item_brand: {
                  type: "string",
                  description: "The brand of the item.",
                  examples: ["Google", "Nike", "Adidas"],
                },
                item_category: {
                  type: "string",
                  description:
                    "The category of the item. If used as part of a category hierarchy or taxonomy, this is the first category.",
                  examples: ["Apparel", "Footwear", "Electronics"],
                },
                item_category2: {
                  type: "string",
                  description:
                    "The second category hierarchy or additional taxonomy of the item.",
                  examples: ["Adult", "Women", "Men"],
                },
                item_category3: {
                  type: "string",
                  description:
                    "The third category hierarchy or additional taxonomy of the item.",
                  examples: ["Shirts", "Shoes", "Boots"],
                },
                item_category4: {
                  type: "string",
                  description:
                    "The fourth category hierarchy or additional taxonomy of the item.",
                  examples: ["Crew", "Running", "Casual"],
                },
                item_category5: {
                  type: "string",
                  description:
                    "The fifth category hierarchy or additional taxonomy of the item.",
                  examples: ["Short sleeve", "Long distance", "Lightweight"],
                },
                item_list_id: {
                  type: "string",
                  description:
                    "The ID of the list in which the item was presented to the user. If set, item_list_id at the event level is ignored. If not set, item_list_id at the event level is used if available.",
                  examples: [
                    "related_products",
                    "search_results",
                    "recommendations",
                  ],
                },
                item_list_name: {
                  type: "string",
                  description:
                    "The name of the list in which the item was presented to the user. If set, item_list_name at the event level is ignored. If not set, item_list_name at the event level is used if available.",
                  examples: [
                    "Related Products",
                    "Search Results",
                    "Recommended Items",
                  ],
                },
                item_variant: {
                  type: "string",
                  description:
                    "The item variant or unique code or description for additional item details/options.",
                  examples: ["green", "Blue Size 10", "M-Black"],
                },
                location_id: {
                  type: "string",
                  description:
                    "The physical location associated with the item, such as the location of a brick-and-mortar store. It is recommended to use the Google Place ID that corresponds to the associated item. A custom location ID can also be used. Note: location_id is only available at the item level.",
                  examples: [
                    "ChIJIQBpAG2ahYAR_6128GcTUEo",
                    "store_123",
                    "location_sf",
                  ],
                },
                price: {
                  type: "number",
                  description:
                    "The price of the item in the specified currency unit. If a discount is applied to the item, set price to the reduced per-unit price and provide the per-unit price discount in the discount parameter.",
                  examples: [10.01, 21.01, 89.99],
                },
                quantity: {
                  type: "number",
                  description:
                    "The item quantity. If not set, quantity is set to 1.",
                  examples: [1, 2, 3],
                  default: 1,
                },
                promotion_id: {
                  type: "string",
                  description:
                    "The ID of the promotion associated with the item.",
                  examples: ["P_12345", "PROMO_001"],
                },
                promotion_name: {
                  type: "string",
                  description:
                    "The name of the promotion associated with the item.",
                  examples: ["Summer Sale", "Black Friday", "Flash Deal"],
                },
                creative_name: {
                  type: "string",
                  description: "The name of the promotion creative.",
                  examples: ["summer_banner2", "holiday_email_v1"],
                },
                creative_slot: {
                  type: "string",
                  description:
                    "The name of the creative slot associated with the item.",
                  examples: ["featured_app_1", "top_banner", "sidebar"],
                },
                google_business_vertical: {
                  type: "string",
                  description:
                    "The business vertical for the item (e.g., 'retail').",
                  examples: ["retail", "ecommerce"],
                },
              },
            },
          },
        },
      },
      user_data: {
        type: "object",
        description: "User related data.",
        "x-gtm-clear": true,
      },
      $schema: {
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
        type: "string",
      },
    },
    "x-tracking-targets": ["web-datalayer-js"],
  }}
  sourceSchema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
    title: "Add to Cart Event",
    description:
      "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
    "x-tracking-targets": ["web-datalayer-js"],
    type: "object",
    properties: {
      $schema: {
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
        type: "string",
      },
      event: {
        type: "string",
        const: "add_to_cart",
        description:
          "The name of the event indicating a add_to_cart has occurred.",
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data for the purchase event.",
        properties: {
          value: {
            type: "number",
            description:
              "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
            examples: [30.03, 99.99, 45.5],
          },
          currency: {
            type: "string",
            description:
              "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
            examples: ["USD", "EUR", "GBP"],
          },
          items: { $ref: "../components/items.json" },
        },
        required: ["currency", "items"],
      },
    },
    required: ["$schema", "event"],
  }}
  sourcePath={"web/add-to-cart-event.json"}
  schemaSources={{
    "web/add-to-cart-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
      title: "Add to Cart Event",
      description:
        "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
          type: "string",
        },
        event: {
          type: "string",
          const: "add_to_cart",
          description:
            "The name of the event indicating a add_to_cart has occurred.",
        },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data for the purchase event.",
          properties: {
            value: {
              type: "number",
              description:
                "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
              examples: [30.03, 99.99, 45.5],
            },
            currency: {
              type: "string",
              description:
                "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
              examples: ["USD", "EUR", "GBP"],
            },
            items: { $ref: "../components/items.json" },
          },
          required: ["currency", "items"],
        },
      },
      required: ["$schema", "event"],
    },
    "components/items.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/items.json",
      title: "Ecommerce Items Array",
      description: "Items associated with this ecommerce event.",
      type: "array",
      minItems: 1,
      items: { $ref: "./products.json" },
    },
    "components/products.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/products.json",
      title: "A Product",
      description:
        "A product object representing an item for use within a purchase event, based on Google Analytics 4 ecommerce event specifications.",
      type: "object",
      properties: {
        item_id: {
          type: "string",
          description:
            "The ID of the item. Either item_id or item_name is required.",
          examples: ["SKU_12345", "PROD_98765"],
        },
        item_name: {
          type: "string",
          description:
            "The name of the item. Either item_id or item_name is required.",
          examples: ["Stan and Friends Tee", "Blue Running Shoes"],
        },
        affiliation: {
          type: "string",
          description:
            "A product affiliation to indicate a supplier or store. Note: affiliation is only available at the item level.",
          examples: ["Google Merchandise Store", "Nike Store"],
        },
        coupon: {
          type: "string",
          description:
            "The coupon name/code associated with the item. Coupon parameters at event and item levels are independent.",
          examples: ["SUMMER_FUN", "WELCOME20", "SAVE10"],
        },
        discount: {
          type: "number",
          description:
            "The monetary value of the discount per unit applied to the item.",
          examples: [2.22, 5, 10.5],
        },
        index: {
          type: "number",
          description: "The index or position of the item in a list.",
          examples: [0, 1, 2],
        },
        item_brand: {
          type: "string",
          description: "The brand of the item.",
          examples: ["Google", "Nike", "Adidas"],
        },
        item_category: {
          type: "string",
          description:
            "The category of the item. If used as part of a category hierarchy or taxonomy, this is the first category.",
          examples: ["Apparel", "Footwear", "Electronics"],
        },
        item_category2: {
          type: "string",
          description:
            "The second category hierarchy or additional taxonomy of the item.",
          examples: ["Adult", "Women", "Men"],
        },
        item_category3: {
          type: "string",
          description:
            "The third category hierarchy or additional taxonomy of the item.",
          examples: ["Shirts", "Shoes", "Boots"],
        },
        item_category4: {
          type: "string",
          description:
            "The fourth category hierarchy or additional taxonomy of the item.",
          examples: ["Crew", "Running", "Casual"],
        },
        item_category5: {
          type: "string",
          description:
            "The fifth category hierarchy or additional taxonomy of the item.",
          examples: ["Short sleeve", "Long distance", "Lightweight"],
        },
        item_list_id: {
          type: "string",
          description:
            "The ID of the list in which the item was presented to the user. If set, item_list_id at the event level is ignored. If not set, item_list_id at the event level is used if available.",
          examples: ["related_products", "search_results", "recommendations"],
        },
        item_list_name: {
          type: "string",
          description:
            "The name of the list in which the item was presented to the user. If set, item_list_name at the event level is ignored. If not set, item_list_name at the event level is used if available.",
          examples: ["Related Products", "Search Results", "Recommended Items"],
        },
        item_variant: {
          type: "string",
          description:
            "The item variant or unique code or description for additional item details/options.",
          examples: ["green", "Blue Size 10", "M-Black"],
        },
        location_id: {
          type: "string",
          description:
            "The physical location associated with the item, such as the location of a brick-and-mortar store. It is recommended to use the Google Place ID that corresponds to the associated item. A custom location ID can also be used. Note: location_id is only available at the item level.",
          examples: ["ChIJIQBpAG2ahYAR_6128GcTUEo", "store_123", "location_sf"],
        },
        price: {
          type: "number",
          description:
            "The price of the item in the specified currency unit. If a discount is applied to the item, set price to the reduced per-unit price and provide the per-unit price discount in the discount parameter.",
          examples: [10.01, 21.01, 89.99],
        },
        quantity: {
          type: "number",
          description: "The item quantity. If not set, quantity is set to 1.",
          examples: [1, 2, 3],
          default: 1,
        },
        promotion_id: {
          type: "string",
          description: "The ID of the promotion associated with the item.",
          examples: ["P_12345", "PROMO_001"],
        },
        promotion_name: {
          type: "string",
          description: "The name of the promotion associated with the item.",
          examples: ["Summer Sale", "Black Friday", "Flash Deal"],
        },
        creative_name: {
          type: "string",
          description: "The name of the promotion creative.",
          examples: ["summer_banner2", "holiday_email_v1"],
        },
        creative_slot: {
          type: "string",
          description:
            "The name of the creative slot associated with the item.",
          examples: ["featured_app_1", "top_banner", "sidebar"],
        },
        google_business_vertical: {
          type: "string",
          description: "The business vertical for the item (e.g., 'retail').",
          examples: ["retail", "ecommerce"],
        },
      },
      required: [],
    },
  }}
/>
<SchemaJsonViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
    title: "Add to Cart Event",
    description:
      "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
    type: "object",
    required: ["$schema", "event"],
    $defs: {
      strictObject: {
        type: "object",
        propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
        additionalProperties: {
          anyOf: [
            { $ref: "#/allOf/0/$defs/strictObject" },
            { type: "array", items: { $ref: "#/allOf/0/$defs/strictObject" } },
            { not: { type: "object" } },
          ],
        },
      },
    },
    $ref: "#/allOf/0/$defs/strictObject",
    properties: {
      event: {
        type: "string",
        description: "The name of the event.",
        const: "add_to_cart",
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data.",
        "x-gtm-clear": true,
        required: ["currency", "items"],
        properties: {
          value: {
            type: "number",
            description:
              "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
            examples: [30.03, 99.99, 45.5],
          },
          currency: {
            type: "string",
            description:
              "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
            examples: ["USD", "EUR", "GBP"],
          },
          items: {
            $schema: "https://json-schema.org/draft/2020-12/schema",
            $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/items.json",
            title: "Ecommerce Items Array",
            description: "Items associated with this ecommerce event.",
            type: "array",
            minItems: 1,
            items: {
              $schema: "https://json-schema.org/draft/2020-12/schema",
              $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/products.json",
              title: "A Product",
              description:
                "A product object representing an item for use within a purchase event, based on Google Analytics 4 ecommerce event specifications.",
              type: "object",
              required: [],
              properties: {
                item_id: {
                  type: "string",
                  description:
                    "The ID of the item. Either item_id or item_name is required.",
                  examples: ["SKU_12345", "PROD_98765"],
                },
                item_name: {
                  type: "string",
                  description:
                    "The name of the item. Either item_id or item_name is required.",
                  examples: ["Stan and Friends Tee", "Blue Running Shoes"],
                },
                affiliation: {
                  type: "string",
                  description:
                    "A product affiliation to indicate a supplier or store. Note: affiliation is only available at the item level.",
                  examples: ["Google Merchandise Store", "Nike Store"],
                },
                coupon: {
                  type: "string",
                  description:
                    "The coupon name/code associated with the item. Coupon parameters at event and item levels are independent.",
                  examples: ["SUMMER_FUN", "WELCOME20", "SAVE10"],
                },
                discount: {
                  type: "number",
                  description:
                    "The monetary value of the discount per unit applied to the item.",
                  examples: [2.22, 5, 10.5],
                },
                index: {
                  type: "number",
                  description: "The index or position of the item in a list.",
                  examples: [0, 1, 2],
                },
                item_brand: {
                  type: "string",
                  description: "The brand of the item.",
                  examples: ["Google", "Nike", "Adidas"],
                },
                item_category: {
                  type: "string",
                  description:
                    "The category of the item. If used as part of a category hierarchy or taxonomy, this is the first category.",
                  examples: ["Apparel", "Footwear", "Electronics"],
                },
                item_category2: {
                  type: "string",
                  description:
                    "The second category hierarchy or additional taxonomy of the item.",
                  examples: ["Adult", "Women", "Men"],
                },
                item_category3: {
                  type: "string",
                  description:
                    "The third category hierarchy or additional taxonomy of the item.",
                  examples: ["Shirts", "Shoes", "Boots"],
                },
                item_category4: {
                  type: "string",
                  description:
                    "The fourth category hierarchy or additional taxonomy of the item.",
                  examples: ["Crew", "Running", "Casual"],
                },
                item_category5: {
                  type: "string",
                  description:
                    "The fifth category hierarchy or additional taxonomy of the item.",
                  examples: ["Short sleeve", "Long distance", "Lightweight"],
                },
                item_list_id: {
                  type: "string",
                  description:
                    "The ID of the list in which the item was presented to the user. If set, item_list_id at the event level is ignored. If not set, item_list_id at the event level is used if available.",
                  examples: [
                    "related_products",
                    "search_results",
                    "recommendations",
                  ],
                },
                item_list_name: {
                  type: "string",
                  description:
                    "The name of the list in which the item was presented to the user. If set, item_list_name at the event level is ignored. If not set, item_list_name at the event level is used if available.",
                  examples: [
                    "Related Products",
                    "Search Results",
                    "Recommended Items",
                  ],
                },
                item_variant: {
                  type: "string",
                  description:
                    "The item variant or unique code or description for additional item details/options.",
                  examples: ["green", "Blue Size 10", "M-Black"],
                },
                location_id: {
                  type: "string",
                  description:
                    "The physical location associated with the item, such as the location of a brick-and-mortar store. It is recommended to use the Google Place ID that corresponds to the associated item. A custom location ID can also be used. Note: location_id is only available at the item level.",
                  examples: [
                    "ChIJIQBpAG2ahYAR_6128GcTUEo",
                    "store_123",
                    "location_sf",
                  ],
                },
                price: {
                  type: "number",
                  description:
                    "The price of the item in the specified currency unit. If a discount is applied to the item, set price to the reduced per-unit price and provide the per-unit price discount in the discount parameter.",
                  examples: [10.01, 21.01, 89.99],
                },
                quantity: {
                  type: "number",
                  description:
                    "The item quantity. If not set, quantity is set to 1.",
                  examples: [1, 2, 3],
                  default: 1,
                },
                promotion_id: {
                  type: "string",
                  description:
                    "The ID of the promotion associated with the item.",
                  examples: ["P_12345", "PROMO_001"],
                },
                promotion_name: {
                  type: "string",
                  description:
                    "The name of the promotion associated with the item.",
                  examples: ["Summer Sale", "Black Friday", "Flash Deal"],
                },
                creative_name: {
                  type: "string",
                  description: "The name of the promotion creative.",
                  examples: ["summer_banner2", "holiday_email_v1"],
                },
                creative_slot: {
                  type: "string",
                  description:
                    "The name of the creative slot associated with the item.",
                  examples: ["featured_app_1", "top_banner", "sidebar"],
                },
                google_business_vertical: {
                  type: "string",
                  description:
                    "The business vertical for the item (e.g., 'retail').",
                  examples: ["retail", "ecommerce"],
                },
              },
            },
          },
        },
      },
      user_data: {
        type: "object",
        description: "User related data.",
        "x-gtm-clear": true,
      },
      $schema: {
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
        type: "string",
      },
    },
    "x-tracking-targets": ["web-datalayer-js"],
  }}
  sourcePath={"web/add-to-cart-event.json"}
  schemaSources={{
    "web/add-to-cart-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
      title: "Add to Cart Event",
      description:
        "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
          type: "string",
        },
        event: {
          type: "string",
          const: "add_to_cart",
          description:
            "The name of the event indicating a add_to_cart has occurred.",
        },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data for the purchase event.",
          properties: {
            value: {
              type: "number",
              description:
                "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
              examples: [30.03, 99.99, 45.5],
            },
            currency: {
              type: "string",
              description:
                "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
              examples: ["USD", "EUR", "GBP"],
            },
            items: { $ref: "../components/items.json" },
          },
          required: ["currency", "items"],
        },
      },
      required: ["$schema", "event"],
    },
    "components/items.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/items.json",
      title: "Ecommerce Items Array",
      description: "Items associated with this ecommerce event.",
      type: "array",
      minItems: 1,
      items: { $ref: "./products.json" },
    },
    "components/products.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/products.json",
      title: "A Product",
      description:
        "A product object representing an item for use within a purchase event, based on Google Analytics 4 ecommerce event specifications.",
      type: "object",
      properties: {
        item_id: {
          type: "string",
          description:
            "The ID of the item. Either item_id or item_name is required.",
          examples: ["SKU_12345", "PROD_98765"],
        },
        item_name: {
          type: "string",
          description:
            "The name of the item. Either item_id or item_name is required.",
          examples: ["Stan and Friends Tee", "Blue Running Shoes"],
        },
        affiliation: {
          type: "string",
          description:
            "A product affiliation to indicate a supplier or store. Note: affiliation is only available at the item level.",
          examples: ["Google Merchandise Store", "Nike Store"],
        },
        coupon: {
          type: "string",
          description:
            "The coupon name/code associated with the item. Coupon parameters at event and item levels are independent.",
          examples: ["SUMMER_FUN", "WELCOME20", "SAVE10"],
        },
        discount: {
          type: "number",
          description:
            "The monetary value of the discount per unit applied to the item.",
          examples: [2.22, 5, 10.5],
        },
        index: {
          type: "number",
          description: "The index or position of the item in a list.",
          examples: [0, 1, 2],
        },
        item_brand: {
          type: "string",
          description: "The brand of the item.",
          examples: ["Google", "Nike", "Adidas"],
        },
        item_category: {
          type: "string",
          description:
            "The category of the item. If used as part of a category hierarchy or taxonomy, this is the first category.",
          examples: ["Apparel", "Footwear", "Electronics"],
        },
        item_category2: {
          type: "string",
          description:
            "The second category hierarchy or additional taxonomy of the item.",
          examples: ["Adult", "Women", "Men"],
        },
        item_category3: {
          type: "string",
          description:
            "The third category hierarchy or additional taxonomy of the item.",
          examples: ["Shirts", "Shoes", "Boots"],
        },
        item_category4: {
          type: "string",
          description:
            "The fourth category hierarchy or additional taxonomy of the item.",
          examples: ["Crew", "Running", "Casual"],
        },
        item_category5: {
          type: "string",
          description:
            "The fifth category hierarchy or additional taxonomy of the item.",
          examples: ["Short sleeve", "Long distance", "Lightweight"],
        },
        item_list_id: {
          type: "string",
          description:
            "The ID of the list in which the item was presented to the user. If set, item_list_id at the event level is ignored. If not set, item_list_id at the event level is used if available.",
          examples: ["related_products", "search_results", "recommendations"],
        },
        item_list_name: {
          type: "string",
          description:
            "The name of the list in which the item was presented to the user. If set, item_list_name at the event level is ignored. If not set, item_list_name at the event level is used if available.",
          examples: ["Related Products", "Search Results", "Recommended Items"],
        },
        item_variant: {
          type: "string",
          description:
            "The item variant or unique code or description for additional item details/options.",
          examples: ["green", "Blue Size 10", "M-Black"],
        },
        location_id: {
          type: "string",
          description:
            "The physical location associated with the item, such as the location of a brick-and-mortar store. It is recommended to use the Google Place ID that corresponds to the associated item. A custom location ID can also be used. Note: location_id is only available at the item level.",
          examples: ["ChIJIQBpAG2ahYAR_6128GcTUEo", "store_123", "location_sf"],
        },
        price: {
          type: "number",
          description:
            "The price of the item in the specified currency unit. If a discount is applied to the item, set price to the reduced per-unit price and provide the per-unit price discount in the discount parameter.",
          examples: [10.01, 21.01, 89.99],
        },
        quantity: {
          type: "number",
          description: "The item quantity. If not set, quantity is set to 1.",
          examples: [1, 2, 3],
          default: 1,
        },
        promotion_id: {
          type: "string",
          description: "The ID of the promotion associated with the item.",
          examples: ["P_12345", "PROMO_001"],
        },
        promotion_name: {
          type: "string",
          description: "The name of the promotion associated with the item.",
          examples: ["Summer Sale", "Black Friday", "Flash Deal"],
        },
        creative_name: {
          type: "string",
          description: "The name of the promotion creative.",
          examples: ["summer_banner2", "holiday_email_v1"],
        },
        creative_slot: {
          type: "string",
          description:
            "The name of the creative slot associated with the item.",
          examples: ["featured_app_1", "top_banner", "sidebar"],
        },
        google_business_vertical: {
          type: "string",
          description: "The business vertical for the item (e.g., 'retail').",
          examples: ["retail", "ecommerce"],
        },
      },
      required: [],
    },
  }}
/>

<BottomPartial />
